parser/protolsd_parser.go
// Code generated from ProtoLSD.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // ProtoLSD

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ProtoLSDParser struct {
	*antlr.BaseParser
}

var ProtoLSDParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func protolsdParserInit() {
	staticData := &ProtoLSDParserStaticData
	staticData.LiteralNames = []string{
		"", "'*'", "'int'", "'uint'", "'long'", "'ulong'", "'import'", "'private'",
		"'service'", "'rpc'", "'enum'", "'message'", "'returns'", "'option'",
		"'optional'", "'required'", "'repeated'", "'package'", "", "", "", "",
		"", "", "", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','",
		"'='", "'.'", "'#'", "'?'", "'[]'", "'{}'", "'!'", "'+'", "'@'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "IMPORT", "PRIVATE", "SERVICE", "RPC", "ENUM",
		"MESSAGE", "RETURNS", "OPTION", "OPTIONAL", "REQUIRED", "REPEATED",
		"PACKAGE", "LINE_COMMENT", "BLOCK_COMMENT", "IDENTIFIER", "PREPROCESSOR_NAME",
		"STRING", "NUMBER", "MAP", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET",
		"RBRACKET", "SEMI", "COMMA", "EQUAL", "DOT", "HASH", "QUESTION", "ARRAY",
		"OBJECT", "BANG", "PLUS", "ANNOTATION", "WS",
	}
	staticData.RuleNames = []string{
		"semi", "protoLSD", "statement", "importStatement", "serviceDefinition",
		"serviceBody", "rpcDefinition", "rpcParameters", "rpcParameter", "rpcParameterModifier",
		"rpcReturn", "rpcInput", "rpcMethodMessage", "rpcSingleMessage", "rpcMessageValue",
		"enumDefinition", "enumBody", "enumField", "messageDefinition", "messageBody",
		"messageBodyStatement", "messageField", "preprocessorParameters", "preprocessorDirective",
		"annotationDirective", "optionalModifier", "optionStatement", "packageStatement",
		"dataType", "dataTypeText",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ProtoLSDParserInit initializes any static state used to implement ProtoLSDParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewProtoLSDParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ProtoLSDParserInit() {
	staticData := &ProtoLSDParserStaticData
	staticData.once.Do(protolsdParserInit)
}

// NewProtoLSDParser produces a new parser instance for the optional input antlr.TokenStream.
func NewProtoLSDParser(input antlr.TokenStream) *ProtoLSDParser {
	ProtoLSDParserInit()
	this := new(ProtoLSDParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ProtoLSDParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ProtoLSD.g4"

	return this
}

// ProtoLSDParser tokens.
const (
	ProtoLSDParserEOF               = antlr.TokenEOF
	ProtoLSDParserT__0              = 1
	ProtoLSDParserT__1              = 2
	ProtoLSDParserT__2              = 3
	ProtoLSDParserT__3              = 4
	ProtoLSDParserT__4              = 5
	ProtoLSDParserIMPORT            = 6
	ProtoLSDParserPRIVATE           = 7
	ProtoLSDParserSERVICE           = 8
	ProtoLSDParserRPC               = 9
	ProtoLSDParserENUM              = 10
	ProtoLSDParserMESSAGE           = 11
	ProtoLSDParserRETURNS           = 12
	ProtoLSDParserOPTION            = 13
	ProtoLSDParserOPTIONAL          = 14
	ProtoLSDParserREQUIRED          = 15
	ProtoLSDParserREPEATED          = 16
	ProtoLSDParserPACKAGE           = 17
	ProtoLSDParserLINE_COMMENT      = 18
	ProtoLSDParserBLOCK_COMMENT     = 19
	ProtoLSDParserIDENTIFIER        = 20
	ProtoLSDParserPREPROCESSOR_NAME = 21
	ProtoLSDParserSTRING            = 22
	ProtoLSDParserNUMBER            = 23
	ProtoLSDParserMAP               = 24
	ProtoLSDParserLPAREN            = 25
	ProtoLSDParserRPAREN            = 26
	ProtoLSDParserLBRACE            = 27
	ProtoLSDParserRBRACE            = 28
	ProtoLSDParserLBRACKET          = 29
	ProtoLSDParserRBRACKET          = 30
	ProtoLSDParserSEMI              = 31
	ProtoLSDParserCOMMA             = 32
	ProtoLSDParserEQUAL             = 33
	ProtoLSDParserDOT               = 34
	ProtoLSDParserHASH              = 35
	ProtoLSDParserQUESTION          = 36
	ProtoLSDParserARRAY             = 37
	ProtoLSDParserOBJECT            = 38
	ProtoLSDParserBANG              = 39
	ProtoLSDParserPLUS              = 40
	ProtoLSDParserANNOTATION        = 41
	ProtoLSDParserWS                = 42
)

// ProtoLSDParser rules.
const (
	ProtoLSDParserRULE_semi                   = 0
	ProtoLSDParserRULE_protoLSD               = 1
	ProtoLSDParserRULE_statement              = 2
	ProtoLSDParserRULE_importStatement        = 3
	ProtoLSDParserRULE_serviceDefinition      = 4
	ProtoLSDParserRULE_serviceBody            = 5
	ProtoLSDParserRULE_rpcDefinition          = 6
	ProtoLSDParserRULE_rpcParameters          = 7
	ProtoLSDParserRULE_rpcParameter           = 8
	ProtoLSDParserRULE_rpcParameterModifier   = 9
	ProtoLSDParserRULE_rpcReturn              = 10
	ProtoLSDParserRULE_rpcInput               = 11
	ProtoLSDParserRULE_rpcMethodMessage       = 12
	ProtoLSDParserRULE_rpcSingleMessage       = 13
	ProtoLSDParserRULE_rpcMessageValue        = 14
	ProtoLSDParserRULE_enumDefinition         = 15
	ProtoLSDParserRULE_enumBody               = 16
	ProtoLSDParserRULE_enumField              = 17
	ProtoLSDParserRULE_messageDefinition      = 18
	ProtoLSDParserRULE_messageBody            = 19
	ProtoLSDParserRULE_messageBodyStatement   = 20
	ProtoLSDParserRULE_messageField           = 21
	ProtoLSDParserRULE_preprocessorParameters = 22
	ProtoLSDParserRULE_preprocessorDirective  = 23
	ProtoLSDParserRULE_annotationDirective    = 24
	ProtoLSDParserRULE_optionalModifier       = 25
	ProtoLSDParserRULE_optionStatement        = 26
	ProtoLSDParserRULE_packageStatement       = 27
	ProtoLSDParserRULE_dataType               = 28
	ProtoLSDParserRULE_dataTypeText           = 29
)

// ISemiContext is an interface to support dynamic dispatch.
type ISemiContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SEMI() antlr.TerminalNode

	// IsSemiContext differentiates from other interfaces.
	IsSemiContext()
}

type SemiContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySemiContext() *SemiContext {
	var p = new(SemiContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProtoLSDParserRULE_semi
	return p
}

func InitEmptySemiContext(p *SemiContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProtoLSDParserRULE_semi
}

func (*SemiContext) IsSemiContext() {}

func NewSemiContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SemiContext {
	var p = new(SemiContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtoLSDParserRULE_semi

	return p
}

func (s *SemiContext) GetParser() antlr.Parser { return s.parser }

func (s *SemiContext) SEMI() antlr.TerminalNode {
	return s.GetToken(ProtoLSDParserSEMI, 0)
}

func (s *SemiContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SemiContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SemiContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtoLSDListener); ok {
		listenerT.EnterSemi(s)
	}
}

func (s *SemiContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtoLSDListener); ok {
		listenerT.ExitSemi(s)
	}
}

func (p *ProtoLSDParser) Semi() (localctx ISemiContext) {
	localctx = NewSemiContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ProtoLSDParserRULE_semi)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == ProtoLSDParserSEMI {
		{
			p.SetState(60)
			p.Match(ProtoLSDParserSEMI)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IProtoLSDContext is an interface to support dynamic dispatch.
type IProtoLSDContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsProtoLSDContext differentiates from other interfaces.
	IsProtoLSDContext()
}

type ProtoLSDContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProtoLSDContext() *ProtoLSDContext {
	var p = new(ProtoLSDContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProtoLSDParserRULE_protoLSD
	return p
}

func InitEmptyProtoLSDContext(p *ProtoLSDContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProtoLSDParserRULE_protoLSD
}

func (*ProtoLSDContext) IsProtoLSDContext() {}

func NewProtoLSDContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProtoLSDContext {
	var p = new(ProtoLSDContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtoLSDParserRULE_protoLSD

	return p
}

func (s *ProtoLSDContext) GetParser() antlr.Parser { return s.parser }

func (s *ProtoLSDContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProtoLSDContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ProtoLSDContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProtoLSDContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProtoLSDContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtoLSDListener); ok {
		listenerT.EnterProtoLSD(s)
	}
}

func (s *ProtoLSDContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtoLSDListener); ok {
		listenerT.ExitProtoLSD(s)
	}
}

func (p *ProtoLSDParser) ProtoLSD() (localctx IProtoLSDContext) {
	localctx = NewProtoLSDContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ProtoLSDParserRULE_protoLSD)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&2233383136704) != 0 {
		{
			p.SetState(63)
			p.Statement()
		}

		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ImportStatement() IImportStatementContext
	ServiceDefinition() IServiceDefinitionContext
	EnumDefinition() IEnumDefinitionContext
	MessageDefinition() IMessageDefinitionContext
	PreprocessorDirective() IPreprocessorDirectiveContext
	OptionStatement() IOptionStatementContext
	PackageStatement() IPackageStatementContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProtoLSDParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProtoLSDParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtoLSDParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) ImportStatement() IImportStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportStatementContext)
}

func (s *StatementContext) ServiceDefinition() IServiceDefinitionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IServiceDefinitionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IServiceDefinitionContext)
}

func (s *StatementContext) EnumDefinition() IEnumDefinitionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEnumDefinitionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEnumDefinitionContext)
}

func (s *StatementContext) MessageDefinition() IMessageDefinitionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMessageDefinitionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMessageDefinitionContext)
}

func (s *StatementContext) PreprocessorDirective() IPreprocessorDirectiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPreprocessorDirectiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPreprocessorDirectiveContext)
}

func (s *StatementContext) OptionStatement() IOptionStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOptionStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOptionStatementContext)
}

func (s *StatementContext) PackageStatement() IPackageStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPackageStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPackageStatementContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtoLSDListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtoLSDListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *ProtoLSDParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ProtoLSDParserRULE_statement)
	p.SetState(76)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case ProtoLSDParserIMPORT, ProtoLSDParserPRIVATE:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(69)
			p.ImportStatement()
		}

	case ProtoLSDParserSERVICE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(70)
			p.ServiceDefinition()
		}

	case ProtoLSDParserENUM, ProtoLSDParserANNOTATION:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(71)
			p.EnumDefinition()
		}

	case ProtoLSDParserMESSAGE:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(72)
			p.MessageDefinition()
		}

	case ProtoLSDParserHASH:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(73)
			p.PreprocessorDirective()
		}

	case ProtoLSDParserOPTION:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(74)
			p.OptionStatement()
		}

	case ProtoLSDParserPACKAGE:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(75)
			p.PackageStatement()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IImportStatementContext is an interface to support dynamic dispatch.
type IImportStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IMPORT() antlr.TerminalNode
	STRING() antlr.TerminalNode
	Semi() ISemiContext
	PRIVATE() antlr.TerminalNode
	BANG() antlr.TerminalNode

	// IsImportStatementContext differentiates from other interfaces.
	IsImportStatementContext()
}

type ImportStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportStatementContext() *ImportStatementContext {
	var p = new(ImportStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProtoLSDParserRULE_importStatement
	return p
}

func InitEmptyImportStatementContext(p *ImportStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProtoLSDParserRULE_importStatement
}

func (*ImportStatementContext) IsImportStatementContext() {}

func NewImportStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportStatementContext {
	var p = new(ImportStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtoLSDParserRULE_importStatement

	return p
}

func (s *ImportStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportStatementContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(ProtoLSDParserIMPORT, 0)
}

func (s *ImportStatementContext) STRING() antlr.TerminalNode {
	return s.GetToken(ProtoLSDParserSTRING, 0)
}

func (s *ImportStatementContext) Semi() ISemiContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISemiContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISemiContext)
}

func (s *ImportStatementContext) PRIVATE() antlr.TerminalNode {
	return s.GetToken(ProtoLSDParserPRIVATE, 0)
}

func (s *ImportStatementContext) BANG() antlr.TerminalNode {
	return s.GetToken(ProtoLSDParserBANG, 0)
}

func (s *ImportStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtoLSDListener); ok {
		listenerT.EnterImportStatement(s)
	}
}

func (s *ImportStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtoLSDListener); ok {
		listenerT.ExitImportStatement(s)
	}
}

func (p *ProtoLSDParser) ImportStatement() (localctx IImportStatementContext) {
	localctx = NewImportStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ProtoLSDParserRULE_importStatement)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(79)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == ProtoLSDParserPRIVATE {
		{
			p.SetState(78)
			p.Match(ProtoLSDParserPRIVATE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(81)
		p.Match(ProtoLSDParserIMPORT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(82)
		p.Match(ProtoLSDParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == ProtoLSDParserBANG {
		{
			p.SetState(83)
			p.Match(ProtoLSDParserBANG)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(86)
		p.Semi()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IServiceDefinitionContext is an interface to support dynamic dispatch.
type IServiceDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SERVICE() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	ServiceBody() IServiceBodyContext
	RBRACE() antlr.TerminalNode

	// IsServiceDefinitionContext differentiates from other interfaces.
	IsServiceDefinitionContext()
}

type ServiceDefinitionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyServiceDefinitionContext() *ServiceDefinitionContext {
	var p = new(ServiceDefinitionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProtoLSDParserRULE_serviceDefinition
	return p
}

func InitEmptyServiceDefinitionContext(p *ServiceDefinitionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProtoLSDParserRULE_serviceDefinition
}

func (*ServiceDefinitionContext) IsServiceDefinitionContext() {}

func NewServiceDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ServiceDefinitionContext {
	var p = new(ServiceDefinitionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtoLSDParserRULE_serviceDefinition

	return p
}

func (s *ServiceDefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *ServiceDefinitionContext) SERVICE() antlr.TerminalNode {
	return s.GetToken(ProtoLSDParserSERVICE, 0)
}

func (s *ServiceDefinitionContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(ProtoLSDParserIDENTIFIER, 0)
}

func (s *ServiceDefinitionContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(ProtoLSDParserLBRACE, 0)
}

func (s *ServiceDefinitionContext) ServiceBody() IServiceBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IServiceBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IServiceBodyContext)
}

func (s *ServiceDefinitionContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(ProtoLSDParserRBRACE, 0)
}

func (s *ServiceDefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}
